# AXON

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  20260710_2125_02a4721f1b56_tasks_table.py  20260710_2144_ac575b9faaf8_auth_users_roles.py  20260710_2225_5ff8e7715573_audit_logs_table.py  20260711_1245_7dcf0b0aeb93_servers_table.py  20260711_1315_32c979e5d2d4_services_and_placements.py  20260711_1600_a1e4c8d92f37_deployments_table.py  20260711_1700_b2f5d9e04a18_deployment_idempotency_unique.py  20260711_1730_c3a6e1f5b209_service_configs_table.py  20260711_1800_d4b7f2a61c3e_scan_results_table.py  20260711_1830_e5c8a3f7b41d_alerts_table.py  20260712_0900_f6d9b3a72e14_config_deliveries_and_target_path.py  20260712_1000_a7e2c5f9d310_approvals_table.py  20260713_0000_0001_init_schema.py  20260713_1510_f35b1607cae0_service_config_content_hash_and_diff_.py  20260716_1121_b2c3d4e5f6a7_task_type_add_agent_install.py  20260717_1749_c3d4e5f6a7b8_build_and_artifact_tables.py  20260723_1200_d4e5f6a7b8c9_active_deployment_task_exclusivity.py  environments_and_service_env_string.py  user_auth_lifecycle.py
backend/app/: __init__.py  main.py
backend/app/adapters/: agent_gateway.py  agent_gateway_registry.py  agent_installer.py  argo_rollouts.py  artifact_transfer.py  build_runner.py  docker_runtime.py  executor.py  http_load_balancer.py  k8s_runtime.py  (+7 more)
backend/proto/: agent.proto
backend/tests/: conftest.py
(+371 files in other folders)
