[project]
name = "yimai-backend"
version = "0.1.0"
description = "一脉 (Axon) 统一运维控制面 —— 后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "flower>=2.0",
    "cryptography>=44.0",
    "hvac>=2.3",
    "pyjwt>=2.10",
    "argon2-cffi>=23.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "black>=24.10",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
# B008:FastAPI 依赖注入以 Depends()/Security() 作默认值是官方推荐写法,非缺陷
ignore = ["B008"]

[tool.black]
line-length = 100
target-version = ["py311"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
